--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="description" content="Blizzard Cinematic Universe">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>Home - Blizzard Cinematic Universe</title>
     <script type="module" src="./js/main.js"></script>
   </head>
   <body>
